[package]
name = "github_rate_checker"
version = "0.1.0"
edition = "2021"
authors = ["Jón Levy <jon.levy@pm.me>"]
license = "MIT"
description = "Simple Github rate-limit checker"
readme = "README.md"
homepage = "https://github.com/you/grrs"
repository = "https://github.com/you/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]


[dependencies]
reqwest = {version = "*", features = ["blocking", "json"]}
serde = {version = "*", features = ["derive"]}
serde_json = "*"
prettytable-rs = "*"
chrono = "0.4.31"
