[package]
name = "github_rate_checker"
version = "0.1.0"
edition = "2021"
authors = ["Jón Levy <jon.levy@pm.me>"]
license = "MIT"
description = "Simple Github rate-limit checker"
readme = "README.md"
homepage = "https://github.com/busla/gh-rate-limit-checker"
repository = "https://github.com/busla/gh-rate-limit-checker"
keywords = ["cli", "github"]
categories = ["command-line-utilities"]

[[bin]]
name = "gh-rate-checker"
path = "src/main.rs"

[dependencies]
reqwest = {version = "0.11.22", features = ["blocking", "json"]}
serde = {version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
prettytable-rs = "0.10.0"
chrono = "0.4.31"
